# SpaceGame

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Source/: Maths.h  Random.h  Texture.h  main.cpp
Source/Components/: AsteroidComponent.h  BulletComponent.h  PhysicComponent.h  PhysicsComponent.h  SpaceShipComponent.h  SpriteComponent.h  TransformComponent.h
Source/System/: AsteroidSystem.cpp  AsteroidSystem.h  BulletSystem.cpp  BulletSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  SpaceShipSystem.cpp  SpaceShipSystem.h  SpriteSystem.cpp  SpriteSystem.h
